[project]
name = "asset-behavior-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "streamlit>=1.43.2",
    "yfinance>=0.2.55",
]
